Add parameter to openapi config
