# openapi.yaml
@@ -172,6 +172,10 @@ paths:
           description: The service type, e.g. "ndt7", "dash", "replay", etc.
           type: string
           required: true
+        - name: machine-type
+          in: query
+          description: The machine type, e.g., "physical" or "virtual".
+          type: string
       responses:
         '200':
           description: The result of the nearest request. Clients should use the
